# advanced_python_course

hw1/: nl.py  tail.py  wc.py
hw1/artefacts/: text.txt  text2.txt
hw2/: requirements.txt  task1.py  task2.py
hw2/artefacts/: 2.1_table.tex  2.2_table_and_images.aux  2.2_table_and_images.tex  link_to_repo.txt
hw2/tex_generation/: README.md  pyproject.toml
hw2/tex_generation/src/tex_generation_noonmare/: generate_funcs.py
hw2/tex_generation/src/tex_generation_noonmare.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
hw3/: task1.py  task2.py  task3.py
hw3/artefacts/3.3/: AB.txt  B.txt  C.txt  CD.txt  hash.txt
hw4/: 4.1_multiprocessing.py  4.1_sync.py  4.1_threading.py  4.2_multiprocessing.py  4.2_threading.py  4.3_processes.py  utils.py
hw4/artefacts/: 4.1_logs.txt  4.2_multiprocessing_logs.txt  4.2_threading_logs.txt  4.3_logs.txt
hw5/: 5.1.py
